--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -32,8 +32,8 @@
 
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Index</a></li>
-            <li><a href="about_page.html">About the Band</a></li>
+            <li><a href="index.html">Index</a></li>
+            <li class="active"><a href="about_page.html">About the Band</a></li>
             <li><a href="album_page.html">Album Information</a></li>
             <li><a href="info_page.html">Members' Information</a></li>
             <li><a href="schedule_page.html">Schedule</a></li>
