--- a/boots_n_beer_band/public_html/log-in_page.html
+++ b/boots_n_beer_band/public_html/log-in_page.html
@@ -31,14 +31,14 @@
 
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Index</a></li>
+            <li><a href="index.html">Index</a></li>
             <li><a href="about_page.html">About the Band</a></li>
             <li><a href="album_page.html">Album Information</a></li>
             <li><a href="info_page.html">Members' Information</a></li>
             <li><a href="schedule_page.html">Schedule</a></li>
             <li><a href="store_page.html">Merchandise</a></li>
             <li><a href="signup_page.html">Sign up</a></li>
-            <li><a href="log-in_page.html">Log-in</a></li>
+            <li class="active"><a href="log-in_page.html">Log-in</a></li>
           </ul>
         </div>
       </div>
