--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -67,5 +67,8 @@ Password:   <input type="text" name="password">
 
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </body>
 </html>
