--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -84,5 +84,8 @@ some of the root'nest toot'nest Tees around town.</p>
 
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </body>
 </html>
