--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -51,15 +51,28 @@
 intend on purchasing if you leave the website. You will also be notified whenever information 
 on any of the pages have been updated.</p>
 
-<form>
-<pre>
-First Name: <input type="text" name="firstname">
-Last Name:  <input type="text" name="lastname">
-Username:   <input type="text" name="username">
-Password:   <input type="text" name="password">
-<input type="submit" value="Submit">
-</pre>
+<form style = "margin-left:20px; width:25%;">
+    <div class="form-group">
+        <label for="email">Email address:</label>
+        <input type="email" class="form-control" id="email" placeholder = "Email">
+    </div>
+    <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd" placeholder = "Password">
+    </div>
+    <div class="form-group">
+        <label for="pwd">Retype Password:</label>
+        <input type="password" class="form-control" id="pwdretype" placeholder = "Password">
+    </div>
+    <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+    </div>
+    <div class="checkbox">
+        <label><input type="checkbox"> Receive News and Updates</label>
+    </div>
+    <button type="submit" class="btn btn-default">Sign Up</button>
 </form>
+<br>
 
 <footer>
 	&copy; 2017 by Boots 'N Beer
