--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -99,7 +99,7 @@ to take home for free! Visit our <a href="store_page.html">Store Page</a> to see
 <p>Boots N Beer hosts giveaways of this nature frequently, so be sure to visit the page 
 often to make sure you never miss out on the deal of a lifetime!</p>
 
-<p id="schedulerefer">For a more complete list of performances, please refer to the "Schedule" page...</p>
+<p id="schedulerefer">For a more complete list of performances, please refer to the <a href="schedule_page.html">Schedule</a> page...</p>
 
 
 <h3>Social Media</h3>
