--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -69,7 +69,7 @@
 
 
 <h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
-border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0px;"> Boots N Beer Band</h1>
+border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0px;"> Boots 'N Beer Band</h1>
 <p>Welcome to the Boots 'N Beer Band official website, home to Iowa's favorite 
 small-town band! See the different links on this page to get any cool novelty items, 
 find out about important dates and events, or just to listen to what kind of music the band has been brewing up!</p>
